<resources>
    <string name="app_name">Sensor-Control IoT Network</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sensor/Control IoT Network</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_light">Light Sensor</string>
    <string name="menu_connections">Connections</string>
    <string name="menu_microphone">Microphone</string>
    <string name="menu_controlSwitch">Control Switch</string>
    <string name="menu_temp">Temperature Sensor</string>
    <string name="menu_fire">Fire Detection</string>
    <string name="menu_water">Flood Detection</string>

    <string name="lightData">Data</string>
    <string name="lightGraph">Graph</string>

    <string name="microphoneData">Data</string>
    <string name="microphoneGraph">Graph</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bluetooth_connect">BluetoothConnectActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_bluetooth_connectivity">BluetoothConnectivity</string>
</resources>