<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_connections"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_connections" />
        <item
            android:id="@+id/nav_light"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_light" />
        <item
            android:id="@+id/nav_microphone"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_microphone" />
        <item
            android:id="@+id/nav_controlSwitch"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_controlSwitch" />
        <item
            android:id="@+id/nav_temp"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_temp" />
        <item
            android:id="@+id/nav_fire"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/menu_fire" />
    </group>
</menu>