<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_connections">

    <fragment
        android:id="@+id/nav_light"
        android:name="com.senior.sensor_controliotnetwork.ui.light.LightFragment"
        android:label="@string/menu_light"
        tools:layout="@layout/fragment_light" />

    <fragment
        android:id="@+id/nav_connections"
        android:name="com.senior.sensor_controliotnetwork.ui.connections.ConnectionsFragment"
        android:label="@string/menu_connections"
        tools:layout="@layout/fragment_connections" />

    <fragment
        android:id="@+id/nav_microphone"
        android:name="com.senior.sensor_controliotnetwork.ui.microphone.MicrophoneFragment"
        android:label="@string/menu_microphone"
        tools:layout="@layout/fragment_microphone" />

    <fragment
        android:id="@+id/nav_controlSwitch"
        android:name="com.senior.sensor_controliotnetwork.ui.controlSwitch.ControlSwitchFragment"
        android:label="@string/menu_controlSwitch"
        tools:layout="@layout/fragment_control_switch" />

    <fragment
        android:id="@+id/nav_temp"
        android:name="com.senior.sensor_controliotnetwork.ui.temp.TempFragment"
        android:label="@string/menu_temp"
        tools:layout="@layout/fragment_temp" />

    <fragment
        android:id="@+id/nav_fire"
        android:name="com.senior.sensor_controliotnetwork.ui.fire.FireFragment"
        android:label="@string/menu_fire"
        tools:layout="@layout/fragment_fire" />
</navigation>